fixed not supported gap on ios

--- a/src/components/CardStack/CardStack.module.scss
+++ b/src/components/CardStack/CardStack.module.scss
@@ -82,7 +82,7 @@ $mid-screen: 920px;
   animation-iteration-count: infinite;
 
   @media screen and (max-width: $small-screen) {
-    width: 25% !important;
+    width: 30% !important;
   }
 }
 
